@@ -35,9 +35,6 @@ dependencies {
   implementation("org.apache.iceberg:iceberg-core")
   implementation("org.apache.iceberg:iceberg-aws")
 
-  // override dnsjava version in dependencies due to https://github.com/dnsjava/dnsjava/issues/329
-  implementation(platform(libs.dnsjava))
-
   implementation(platform(libs.opentelemetry.bom))
 
   implementation(platform(libs.quarkus.bom))
@@ -134,9 +131,6 @@ dependencies {
   intTestImplementation(platform(libs.quarkus.bom))
   intTestImplementation("io.quarkus:quarkus-junit5")
 
-  // override dnsjava version in dependencies due to https://github.com/dnsjava/dnsjava/issues/329
-  intTestImplementation(platform(libs.dnsjava))
-
   // required for QuarkusSparkIT
   intTestImplementation(enforcedPlatform(libs.scala212.lang.library))
   intTestImplementation(enforcedPlatform(libs.scala212.lang.reflect))
@@ -146,12 +140,12 @@ dependencies {
 
 tasks.withType(Test::class.java).configureEach {
   systemProperty("java.util.logging.manager", "org.jboss.logmanager.LogManager")
-  addSparkJvmOptions()
   if (System.getenv("AWS_REGION") == null) {
     environment("AWS_REGION", "us-west-2")
   }
-  // Note: the test secrets are referenced in DropwizardServerManager
-  environment("POLARIS_BOOTSTRAP_CREDENTIALS", "POLARIS,root,test-admin,test-secret")
+  // Note: the test secrets are referenced in
+  // org.apache.polaris.service.quarkus.it.QuarkusServerManager
+  environment("POLARIS_BOOTSTRAP_CREDENTIALS", "POLARIS,test-admin,test-secret")
   jvmArgs("--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED")
   // Need to allow a java security manager after Java 21, for Subject.getSubject to work
   // "getSubject is supported only if a security manager is allowed".
@@ -160,7 +154,25 @@ tasks.withType(Test::class.java).configureEach {
 
 tasks.named<Test>("test").configure { maxParallelForks = 4 }
 
-tasks.named<Test>("intTest").configure { maxParallelForks = 1 }
+tasks.named<Test>("intTest").configure {
+  maxParallelForks = 1
+  // Same issue as above: allow a java security manager after Java 21
+  // (this setting is for the application under test, while the setting above is for test code).
+  systemProperty("quarkus.test.arg-line", "-Djava.security.manager=allow")
+  val logsDir = project.layout.buildDirectory.get().asFile.resolve("logs")
+  // delete files from previous runs
+  doFirst {
+    // delete log files written by Polaris
+    logsDir.deleteRecursively()
+    // delete quarkus.log file (captured Polaris stdout/stderr)
+    project.layout.buildDirectory.get().asFile.resolve("quarkus.log").delete()
+  }
+  // This property is not honored in a per-profile application.properties file,
+  // so we need to set it here.
+  systemProperty("quarkus.log.file.path", logsDir.resolve("polaris.log").absolutePath)
+  // For Spark integration tests
+  addSparkJvmOptions()
+}
 
 /**
  * Adds the JPMS options required for Spark to run on Java 17, taken from the
